--- a/scheduleapp.properties
+++ b/scheduleapp.properties
@@ -1,3 +1,3 @@
 path.variable.maven_repository=C\:\\Users\\Schaawne\\.m2\\repository
 jdk.home.1.8=C\:/Program Files/Java/jdk1.8.0_51
-javac2.instrumentation.includeJavaRuntime=false
+idea.home=C\:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA Community Edition 14
